--- a/VintageHouse/Base.lproj/Main.storyboard
+++ b/VintageHouse/Base.lproj/Main.storyboard
@@ -230,17 +230,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="House Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rB-Xj-fpP">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="House Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1rB-Xj-fpP">
                                 <rect key="frame" x="133.66666666666669" y="20" width="146.66666666666669" height="21.666666666666671"/>
                                 <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxg-AD-hzW">
-                                <rect key="frame" x="55" y="274.66666666666669" width="331" height="175"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" misplaced="YES" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5sJ-NV-K4F">
+                                <rect key="frame" x="39" y="129" width="336" height="191"/>
+                                <string key="text">Vintage House is accomondation company which aims to meet requirement for every single guest. It is founded 2020 by Eva Eng to accept many guest from all over world. The House's main mission is to provide comfortable environment with Vingtage looks.</string>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Where We Are" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7M7-nj-Tnu">
+                                <rect key="frame" x="39" y="62" width="129" height="34"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vxg-AD-hzW">
+                                <rect key="frame" x="39" y="376" width="331" height="175"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z25-3l-2D6">
-                                        <rect key="frame" x="-11" y="-6" width="308" height="199"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="308" height="199"/>
                                         <subviews>
                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="n2T-h6-4mJ">
                                                 <rect key="frame" x="16" y="20" width="155" height="121"/>
@@ -299,40 +312,27 @@
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Z25-3l-2D6" firstAttribute="leading" secondItem="vxg-AD-hzW" secondAttribute="leading" constant="-11" id="ChI-v7-qgR"/>
-                                    <constraint firstItem="Z25-3l-2D6" firstAttribute="top" secondItem="vxg-AD-hzW" secondAttribute="top" constant="-6" id="Dh7-50-C1m"/>
-                                    <constraint firstAttribute="bottom" secondItem="Z25-3l-2D6" secondAttribute="bottom" constant="-18" id="TV0-dY-CXc"/>
-                                    <constraint firstAttribute="trailing" secondItem="Z25-3l-2D6" secondAttribute="trailing" constant="34" id="tPV-dG-xOM"/>
+                                    <constraint firstItem="Z25-3l-2D6" firstAttribute="leading" secondItem="vxg-AD-hzW" secondAttribute="leading" id="ChI-v7-qgR"/>
+                                    <constraint firstItem="Z25-3l-2D6" firstAttribute="top" secondItem="vxg-AD-hzW" secondAttribute="top" id="Dh7-50-C1m"/>
+                                    <constraint firstAttribute="bottom" secondItem="Z25-3l-2D6" secondAttribute="bottom" id="TV0-dY-CXc"/>
+                                    <constraint firstAttribute="trailing" secondItem="Z25-3l-2D6" secondAttribute="trailing" id="tPV-dG-xOM"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5sJ-NV-K4F">
-                                <rect key="frame" x="39" y="114.33333333333333" width="336" height="152.66666666666669"/>
-                                <string key="text">Vintage House is accomondation company which aims to meet requirement for every single guest. It is founded 2020 by Eva Eng to accept many guest from all over world. The House's main mission is to provide comfortable environment with Vingtage looks.</string>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where We Are" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7M7-nj-Tnu">
-                                <rect key="frame" x="39" y="84.666666666666671" width="128.66666666666666" height="21.666666666666671"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2bW-Lq-TuF"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="5sJ-NV-K4F" firstAttribute="centerX" secondItem="Qx9-wR-PLv" secondAttribute="centerX" id="2Wq-CZ-gOb"/>
-                            <constraint firstItem="5sJ-NV-K4F" firstAttribute="top" secondItem="7M7-nj-Tnu" secondAttribute="bottom" constant="8" id="4Iq-Jx-qhA"/>
+                            <constraint firstItem="5sJ-NV-K4F" firstAttribute="top" secondItem="7M7-nj-Tnu" secondAttribute="bottom" constant="33" id="4Iq-Jx-qhA"/>
                             <constraint firstItem="1rB-Xj-fpP" firstAttribute="top" secondItem="2bW-Lq-TuF" secondAttribute="top" constant="20" id="4mX-tX-l8o"/>
-                            <constraint firstItem="Z25-3l-2D6" firstAttribute="top" secondItem="5sJ-NV-K4F" secondAttribute="bottom" constant="1.6666669845581055" id="7Rn-Cp-WM3"/>
+                            <constraint firstItem="Z25-3l-2D6" firstAttribute="top" secondItem="5sJ-NV-K4F" secondAttribute="bottom" constant="56" id="7Rn-Cp-WM3"/>
                             <constraint firstItem="7M7-nj-Tnu" firstAttribute="leading" secondItem="2bW-Lq-TuF" secondAttribute="leading" constant="39" id="9nu-Hq-ROd"/>
                             <constraint firstItem="2bW-Lq-TuF" firstAttribute="trailing" secondItem="5sJ-NV-K4F" secondAttribute="trailing" constant="39" id="CjK-w8-AuH"/>
                             <constraint firstItem="2bW-Lq-TuF" firstAttribute="trailing" secondItem="Z25-3l-2D6" secondAttribute="trailing" constant="62" id="OZr-ee-ySj"/>
                             <constraint firstItem="Z25-3l-2D6" firstAttribute="centerX" secondItem="2bW-Lq-TuF" secondAttribute="centerX" constant="-9" id="Sh7-bL-wGE"/>
                             <constraint firstItem="5sJ-NV-K4F" firstAttribute="leading" secondItem="2bW-Lq-TuF" secondAttribute="leading" constant="39" id="ajm-WY-UBU"/>
                             <constraint firstItem="1rB-Xj-fpP" firstAttribute="centerX" secondItem="Qx9-wR-PLv" secondAttribute="centerX" id="lUP-ao-qun"/>
-                            <constraint firstItem="7M7-nj-Tnu" firstAttribute="top" secondItem="1rB-Xj-fpP" secondAttribute="bottom" constant="43" id="oi3-eZ-G9g"/>
+                            <constraint firstItem="7M7-nj-Tnu" firstAttribute="top" secondItem="1rB-Xj-fpP" secondAttribute="bottom" constant="20.333333333333329" id="oi3-eZ-G9g"/>
                             <constraint firstItem="Z25-3l-2D6" firstAttribute="centerY" secondItem="2bW-Lq-TuF" secondAttribute="centerY" id="pTm-F9-wG6"/>
                         </constraints>
                     </view>
