--- a/VintageHouse/Base.lproj/Main.storyboard
+++ b/VintageHouse/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -866,27 +867,16 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fk-5v-auP">
                                 <rect key="frame" x="0.0" y="158" width="414" height="467"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nHx-rE-qUB">
-                                        <rect key="frame" x="5" y="20" width="404" height="340"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" delaysContentTouches="NO" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="nHx-rE-qUB">
+                                        <rect key="frame" x="5" y="-13" width="404" height="399"/>
+                                        <color key="backgroundColor" name="Color"/>
                                         <string key="text"> Welcome to Vintage House. We are so happy you have chosen to stay with us and we wish you have wonderful visit in San Francisco! Vintage House waas started in May 2020. The purpose of the place was to bring travelers together and provide them with a affordable and comfortable place to stay. For the last 6 years, I had traveled many places in the world, staying hostels, different types of local home stay and working as travelling health care worker. Now that my life feels more settled, I wanted to be able to provide the same type of hospitality that I have experience during these years. I love meeting people from all over the world. It was important to me to put togather a stylish and cozy space to ensure our guests were comfortable during their visit. This home was built in 1957. Most of the renovation was done by myself along with my friends and family. I wanted to keep the some of the retro look along side with some modern necessities. I hope that this space can bring good memories as well as provide feeling of home. We THANK YOU again for staying with us and hope you enjoy your time.</string>
-                                        <color key="textColor" red="0.14509806040000001" green="0.2901961207" blue="0.070588238540000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="textColor" red="0.1058823466" green="0.15686275059999999" blue="0.050980389119999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="17"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNr-NV-ccR">
-                                        <rect key="frame" x="215" y="403" width="123" height="30"/>
-                                        <color key="backgroundColor" red="0.87117522950000004" green="0.96306985619999996" blue="0.85878700019999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="14"/>
-                                        <state key="normal" title="Gallery">
-                                            <color key="titleColor" red="0.1935745478" green="0.39129483700000001" blue="0.40541818740000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="galleryButtonTapped:" destination="YtB-W4-BjO" eventType="touchUpInside" id="DbP-Yk-NNP"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JtW-rI-qPe">
-                                        <rect key="frame" x="77" y="403" width="103" height="30"/>
+                                        <rect key="frame" x="77" y="410" width="103" height="30"/>
                                         <color key="backgroundColor" red="0.1935745478" green="0.39129483700000001" blue="0.40541818740000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="103" id="KJ1-Yb-Zc3"/>
@@ -899,24 +889,35 @@
                                             <segue destination="IzU-ND-6lp" kind="show" id="AfV-AM-We8"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNr-NV-ccR">
+                                        <rect key="frame" x="217" y="410" width="123" height="30"/>
+                                        <color key="backgroundColor" red="0.87117522950000004" green="0.96306985619999996" blue="0.85878700019999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="14"/>
+                                        <state key="normal" title="Gallery">
+                                            <color key="titleColor" red="0.1935745478" green="0.39129483700000001" blue="0.40541818740000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="galleryButtonTapped:" destination="YtB-W4-BjO" eventType="touchUpInside" id="DbP-Yk-NNP"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="nHx-rE-qUB" secondAttribute="trailing" constant="5" id="0LG-bv-c58"/>
                                     <constraint firstItem="JtW-rI-qPe" firstAttribute="leading" secondItem="4fk-5v-auP" secondAttribute="leading" constant="77" id="1hb-cA-Hl4"/>
                                     <constraint firstItem="jNr-NV-ccR" firstAttribute="leading" secondItem="JtW-rI-qPe" secondAttribute="trailing" constant="35" id="Ga2-pX-Nqo"/>
-                                    <constraint firstAttribute="bottom" secondItem="JtW-rI-qPe" secondAttribute="bottom" constant="34" id="N8R-ji-I8S"/>
+                                    <constraint firstAttribute="bottom" secondItem="JtW-rI-qPe" secondAttribute="bottom" constant="27" id="N8R-ji-I8S"/>
                                     <constraint firstItem="JtW-rI-qPe" firstAttribute="baseline" secondItem="jNr-NV-ccR" secondAttribute="baseline" id="r4A-1x-lIm"/>
                                     <constraint firstItem="nHx-rE-qUB" firstAttribute="leading" secondItem="4fk-5v-auP" secondAttribute="leading" constant="5" id="tiH-Cl-TP1"/>
-                                    <constraint firstItem="JtW-rI-qPe" firstAttribute="top" secondItem="nHx-rE-qUB" secondAttribute="bottom" constant="43" id="wAW-I3-tqw"/>
+                                    <constraint firstItem="JtW-rI-qPe" firstAttribute="top" secondItem="nHx-rE-qUB" secondAttribute="bottom" constant="24" id="wAW-I3-tqw"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jug-wL-168"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="8VM-Bx-QQc" secondAttribute="bottom" id="15d-2e-Zed"/>
-                            <constraint firstItem="nHx-rE-qUB" firstAttribute="top" secondItem="7f2-ln-TSt" secondAttribute="bottom" constant="45" id="7cT-az-hYn"/>
+                            <constraint firstItem="nHx-rE-qUB" firstAttribute="top" secondItem="7f2-ln-TSt" secondAttribute="bottom" constant="12" id="7cT-az-hYn"/>
                             <constraint firstItem="4fk-5v-auP" firstAttribute="trailing" secondItem="jug-wL-168" secondAttribute="trailing" id="H6c-0Q-VRQ"/>
                             <constraint firstItem="7f2-ln-TSt" firstAttribute="top" secondItem="jug-wL-168" secondAttribute="top" constant="20" id="Iap-zw-N3W"/>
                             <constraint firstItem="jug-wL-168" firstAttribute="leading" secondItem="7f2-ln-TSt" secondAttribute="leading" constant="-90" id="JsB-un-Jet"/>
@@ -1594,7 +1595,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Pn7-aR-wbS"/>
+        <segue reference="AfV-AM-We8"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="arrowshape.turn.up.left" catalog="system" width="128" height="106"/>
@@ -1610,9 +1611,12 @@
         <image name="p1" width="4001" height="2667"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="phone" catalog="system" width="128" height="115"/>
-        <image name="qa" width="300" height="236"/>
+        <image name="qa" width="217" height="134"/>
         <image name="questionmark" catalog="system" width="96" height="128"/>
         <image name="rectangle.grid.2x2" catalog="system" width="128" height="99"/>
+        <namedColor name="Color">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
