--- a/VintageHouse/Base.lproj/Main.storyboard
+++ b/VintageHouse/Base.lproj/Main.storyboard
@@ -19,10 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="headerImage" translatesAutoresizingMaskIntoConstraints="NO" id="4C4-kK-afe">
-                                <rect key="frame" x="100" y="20" width="214" height="304.33333333333331"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="268"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EQA-9U-Usd">
-                                <rect key="frame" x="20" y="344.33333333333331" width="177" height="122.66666666666669"/>
+                                <rect key="frame" x="20" y="291.33333333333331" width="177" height="149.33333333333331"/>
                                 <state key="normal" title="Product Catalog" image="barrel2">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -31,21 +31,21 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IoQ-Me-dnN">
-                                <rect key="frame" x="20" y="487.00000000000006" width="177" height="122.66666666666669"/>
+                                <rect key="frame" x="20" y="460.66666666666674" width="177" height="149"/>
                                 <state key="normal" backgroundImage="qa"/>
                                 <connections>
                                     <segue destination="Yu1-ki-tXj" kind="show" id="Qud-gC-hVr"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ayM-4L-stc">
-                                <rect key="frame" x="217" y="487.00000000000006" width="177" height="122.66666666666669"/>
+                                <rect key="frame" x="217" y="460.66666666666674" width="177" height="149"/>
                                 <state key="normal" image="logoS"/>
                                 <connections>
                                     <segue destination="YtB-W4-BjO" kind="show" id="cZ6-cs-BQ1"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V1u-Kn-u3f">
-                                <rect key="frame" x="217" y="344.33333333333331" width="177" height="122.66666666666669"/>
+                                <rect key="frame" x="217" y="291.33333333333331" width="177" height="149.33333333333331"/>
                                 <state key="normal" image="bottles"/>
                                 <connections>
                                     <segue destination="IzU-ND-6lp" kind="show" id="Pn7-aR-wbS"/>
@@ -95,23 +95,23 @@
                             <constraint firstItem="ZrC-9H-ZIJ" firstAttribute="top" secondItem="ayM-4L-stc" secondAttribute="bottom" constant="20" id="48K-fx-FUy"/>
                             <constraint firstItem="V1u-Kn-u3f" firstAttribute="leading" secondItem="EQA-9U-Usd" secondAttribute="trailing" constant="20" id="5GG-vw-MG0"/>
                             <constraint firstItem="IoQ-Me-dnN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6fJ-dO-qby"/>
-                            <constraint firstItem="4C4-kK-afe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="7w5-dP-PHU"/>
+                            <constraint firstItem="4C4-kK-afe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="7w5-dP-PHU"/>
                             <constraint firstItem="EQA-9U-Usd" firstAttribute="height" secondItem="IoQ-Me-dnN" secondAttribute="height" id="CLm-QL-f4y"/>
                             <constraint firstItem="ayM-4L-stc" firstAttribute="leading" secondItem="IoQ-Me-dnN" secondAttribute="trailing" constant="20" id="Hvh-lc-CWR"/>
                             <constraint firstItem="EQA-9U-Usd" firstAttribute="width" secondItem="V1u-Kn-u3f" secondAttribute="width" id="I30-8u-rMy"/>
-                            <constraint firstItem="4C4-kK-afe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="KMQ-cs-hjz"/>
-                            <constraint firstItem="EQA-9U-Usd" firstAttribute="top" secondItem="4C4-kK-afe" secondAttribute="bottom" constant="20" id="P4u-Yx-oVy"/>
+                            <constraint firstItem="4C4-kK-afe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="KMQ-cs-hjz"/>
+                            <constraint firstItem="EQA-9U-Usd" firstAttribute="top" secondItem="4C4-kK-afe" secondAttribute="bottom" constant="23.333332061767578" id="P4u-Yx-oVy"/>
                             <constraint firstItem="ZrC-9H-ZIJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Qbp-QT-uvM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ayM-4L-stc" secondAttribute="trailing" constant="20" id="UNe-SO-mcK"/>
-                            <constraint firstItem="V1u-Kn-u3f" firstAttribute="top" secondItem="4C4-kK-afe" secondAttribute="bottom" constant="20" id="Z3J-KR-q7l"/>
+                            <constraint firstItem="V1u-Kn-u3f" firstAttribute="top" secondItem="4C4-kK-afe" secondAttribute="bottom" constant="23.333332061767578" id="Z3J-KR-q7l"/>
                             <constraint firstItem="IoQ-Me-dnN" firstAttribute="width" secondItem="ayM-4L-stc" secondAttribute="width" id="ZRX-Fs-AUL"/>
                             <constraint firstItem="ZrC-9H-ZIJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="aFV-3f-wg4"/>
                             <constraint firstItem="ZrC-9H-ZIJ" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.09" id="bMa-U4-k5M"/>
-                            <constraint firstItem="4C4-kK-afe" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-100" id="ccF-tR-1SR"/>
+                            <constraint firstItem="4C4-kK-afe" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ccF-tR-1SR"/>
                             <constraint firstItem="ZrC-9H-ZIJ" firstAttribute="top" secondItem="IoQ-Me-dnN" secondAttribute="bottom" constant="20" id="ceZ-Ve-l2L"/>
                             <constraint firstItem="IoQ-Me-dnN" firstAttribute="top" secondItem="EQA-9U-Usd" secondAttribute="bottom" constant="20" id="ggk-SE-aKC"/>
                             <constraint firstItem="V1u-Kn-u3f" firstAttribute="height" secondItem="ayM-4L-stc" secondAttribute="height" id="mf4-ay-QxZ"/>
-                            <constraint firstItem="4C4-kK-afe" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.44" id="nzr-7e-02F"/>
+                            <constraint firstItem="4C4-kK-afe" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" multiplier="0.44" constant="-36.480000000000018" id="nzr-7e-02F"/>
                             <constraint firstItem="EQA-9U-Usd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="uT6-ai-J9l"/>
                             <constraint firstItem="ayM-4L-stc" firstAttribute="top" secondItem="V1u-Kn-u3f" secondAttribute="bottom" constant="20" id="yRK-lG-VWz"/>
                         </constraints>
@@ -1562,15 +1562,15 @@
         <image name="barrel2" width="355" height="260"/>
         <image name="bottles" width="333" height="282"/>
         <image name="hand.raised" catalog="system" width="128" height="128"/>
-        <image name="headerImage" width="1075" height="1795"/>
+        <image name="headerImage" width="900" height="715"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
         <image name="location" catalog="system" width="128" height="121"/>
-        <image name="logoS" width="422" height="324"/>
+        <image name="logoS" width="500" height="568"/>
         <image name="p1" width="4001" height="2667"/>
         <image name="pencil" catalog="system" width="128" height="113"/>
         <image name="phone" catalog="system" width="128" height="115"/>
-        <image name="qa" width="217" height="134"/>
+        <image name="qa" width="554" height="472"/>
         <image name="rectangle.grid.2x2" catalog="system" width="128" height="99"/>
         <namedColor name="Color">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
